# IoT

./: .gitignore  README.md
.github/workflows/: cmake.yml  main.yml
AzureSphere/: Dockerfile
AzureSphere/MqttFunction/: .gitignore  AzureSphere.cs  CallerInfo.cs  MqttConfig.cs  MqttConfigFactory.cs  MqttFunction.csproj  MqttFunction.sln  MqttOptions.cs  MqttPublisher.cs  Program.cs  Startup.cs
AzureSphere/MqttFunction/Properties/ServiceDependencies/azuresphere-exp - Zip Deploy/: profile.arm.json
AzureSphere/MySphere/: CMakeLists.txt  CMakeSettings.json  Dockerfile  MyShere.vcxproj  README.md  app_manifest.json  azure_iot_utilities.c  azurefunction.h  build_options.h  buildscript.sh  i2c.c  main.c
Combined/MotionDetection/: Comms.ino  MotionDetection.ino  OTA.ino
ESP32-Cam/CameraServer/: Camera.ino  CameraServer.ino  Comms.ino
IntelGalileo/: DSMRPacketParser.js  README.md  p1.js
NodeMcu/MotionDetection/: Camera.ino  Comms.ino  MotionDetection.ino  MotionSenser.ino
NodeMcu/MotionDetection.ino/: MotionDetection.ino
